--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -180,11 +180,12 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@android:color/transparent"
-                android:drawableRight="@drawable/ic_lock_outline_black_24dp"
+                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                 android:drawablePadding="10dp"
                 android:gravity="center"
                 android:hint="کد تایید"
                 android:inputType="phone"
+                android:layoutDirection="rtl"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color01"
@@ -264,7 +265,8 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:autoLink="web"
-                android:gravity="right"
+                android:gravity="start"
+                android:onClick="getLaws"
                 android:layoutDirection="rtl"
                 android:text="@string/linkToSite"
                 app:layout_constraintHeight_percent="0.1"
