--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,11 +18,24 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/color06"
+            android:layoutDirection="rtl"
             android:orientation="horizontal"
             app:layout_constraintHeight_percent="0.15"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/img_edit"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginEnd="@dimen/margin_border"
+                android:gravity="center"
+                android:src="@drawable/ic_edit_white_24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.08" />
 
             <TextView
                 android:id="@+id/tv_title"
@@ -30,7 +43,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:gravity="center"
-                android:text="@string/score_intro"
+                android:text="@string/profile"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="4"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -45,7 +58,6 @@
                 style="@style/tv_return"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:gravity="right"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="4"
                 app:layout_constraintLeft_toRightOf="@id/tv_title"
@@ -142,6 +154,7 @@
             android:id="@+id/et_name"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/transparent"
             android:drawableStart="@drawable/ic_person_outline_black_24dp"
             android:layoutDirection="rtl"
             android:translationY="-40dp"
@@ -166,6 +179,7 @@
             android:id="@+id/et_email"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/transparent"
             android:drawableStart="@drawable/ic_mail_outline_black_24dp"
             android:layoutDirection="rtl"
             android:translationY="-40dp"
@@ -190,6 +204,7 @@
             android:id="@+id/et_phoneNum"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/transparent"
             android:drawableStart="@drawable/ic_phone_black_24dp"
             android:layoutDirection="rtl"
             android:translationY="-40dp"
