--- a/app/src/main/res/layout/activity_gift_card.xml
+++ b/app/src/main/res/layout/activity_gift_card.xml
@@ -178,6 +178,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1.8"
             android:gravity="center"
+            android:background="@android:color/transparent"
             android:layoutDirection="rtl"
             android:text="@string/gift_card" />
 
@@ -231,6 +232,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1.8"
             android:gravity="center"
+            android:background="@android:color/transparent"
             android:layoutDirection="rtl"
             android:text="@string/discount_code" />
 
