--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,6 @@
     android:fitsSystemWindows="true"
     android:layoutDirection="rtl"
     tools:context=".activity.main.MainActivity">
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/rel_above"
         android:layout_width="match_parent"
@@ -39,7 +38,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#001D25"
+            android:background="@color/dark"
             app:layout_constraintBottom_toTopOf="@id/guideline_underHeader"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
