--- a/app/src/main/res/layout/card_address.xml
+++ b/app/src/main/res/layout/card_address.xml
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="0.5"
 
             android:background="@drawable/ic_close_pink"
