--- a/app/src/main/res/layout/card_archive.xml
+++ b/app/src/main/res/layout/card_archive.xml
@@ -1,93 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="40dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="40dp"
+    android:layout_marginLeft="@dimen/card_margin_sides"
+    android:layout_marginTop="@dimen/margin_border"
+    android:layout_marginRight="@dimen/card_margin_sides"
     android:background="@drawable/back_thirty_radius_white"
-    android:elevation="20dp">
+    android:layoutDirection="rtl">
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_right"
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_left"
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95" />
+
 
     <LinearLayout
         android:id="@+id/lin1"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="@dimen/margin_border"
+        android:layoutDirection="rtl"
         android:orientation="horizontal"
         android:weightSum="3"
-        android:layoutDirection="rtl">
+        app:layout_constraintLeft_toRightOf="@id/guideline_left"
+        app:layout_constraintRight_toLeftOf="@id/guideline_right"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/tv_travel_code"
+            style="@style/gray_14"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:drawableRight="@drawable/ic_public_pink_24dp"
-            android:gravity="right"
+            android:layout_weight="1.8"
+            android:drawableStart="@drawable/ic_public_pink_24dp"
             android:layoutDirection="rtl"
-            android:paddingRight="10dp"
+            android:paddingLeft="@dimen/text_padding"
+            android:paddingRight="@dimen/text_padding"
             android:text="#aa"
-            android:textColor="@color/darkGray"
-            android:textDirection="rtl"
-            android:textSize="15sp"
-            android:textStyle="bold">
+            android:textDirection="rtl">
 
         </TextView>
 
         <TextView
-            android:id="@+id/tv_date"
+            android:id="@+id/tv_travel_date"
+            style="@style/text_pink"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:drawableRight="@drawable/ic_date_range_pink_24dp"
+            android:layout_gravity="center"
+            android:layout_weight="1.2"
+            android:drawableStart="@drawable/ic_date_range_pink_24dp"
             android:drawablePadding="10dp"
             android:layoutDirection="ltr"
-            android:layout_gravity="center"
-            android:text="1397/8/22"
-            android:textColor="@color/pink"
-            android:textDirection="rtl"
-            android:textSize="15sp"
-            android:textStyle="bold">
+            android:text="1397/8/22">
 
         </TextView>
-
 
 
     </LinearLayout>
 
     <View
         android:id="@+id/view1"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_below="@id/lin1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/gray" />
+        android:layout_marginTop="@dimen/margin_border"
+        android:background="@color/gray"
+        app:layout_constraintLeft_toRightOf="@id/guideline_left"
+        app:layout_constraintRight_toLeftOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/lin1" />
 
     <LinearLayout
         android:id="@+id/lin2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/view1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical">
+        android:layout_marginTop="@dimen/margin_border"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toRightOf="@id/guideline_left"
+        app:layout_constraintRight_toLeftOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/view1">
 
         <TextView
             android:id="@+id/tv_start_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_location_green"
+            android:drawableStart="@drawable/ic_location_green"
             android:drawablePadding="5dp"
+            android:layoutDirection="rtl"
             android:text="ولیعصر،میدان ولیعصر،پلاک 1،واحد5"
             android:textColor="@color/color06"
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/tv_sender_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -111,120 +124,121 @@
             android:textDirection="rtl"
             android:textSize="16sp"
             android:textStyle="bold" />
-
+-->
 
     </LinearLayout>
 
     <View
         android:id="@+id/view2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_below="@id/lin2"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/gray" />
+        android:layout_marginTop="@dimen/margin_border"
+        android:background="@color/gray"
+        app:layout_constraintLeft_toRightOf="@id/guideline_left"
+        app:layout_constraintRight_toLeftOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/lin2" />
 
     <LinearLayout
         android:id="@+id/lin3"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/view2"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical">
+        android:layout_marginTop="@dimen/margin_border"
+        android:layoutDirection="rtl"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toRightOf="@id/guideline_left"
+        app:layout_constraintRight_toLeftOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/view2">
 
         <TextView
             android:id="@+id/tv_end_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_location_orange"
+            android:drawableStart="@drawable/ic_location_orange"
             android:drawablePadding="5dp"
+            android:layoutDirection="rtl"
             android:text="ولیعصر،میدان ولیعصر،پلاک 1،واحد5"
             android:textColor="@color/color06"
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_receiver_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:drawableRight="@drawable/ic_person_orange"
-            android:drawablePadding="5dp"
-            android:text="محمدرضا اکبری"
-            android:textColor="@color/color06"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+        <!-- <TextView
+             android:id="@+id/tv_receiver_name"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="5dp"
+             android:drawableRight="@drawable/ic_person_orange"
+             android:drawablePadding="5dp"
+             android:text="محمدرضا اکبری"
+             android:textColor="@color/color06"
+             android:textSize="16sp"
+             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_receiver_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:drawableRight="@drawable/ic_phone_orange"
-            android:drawablePadding="5dp"
-            android:text="0990 537 4633"
-            android:textColor="@color/color06"
-            android:textDirection="rtl"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+         <TextView
+             android:id="@+id/tv_receiver_phone"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="5dp"
+             android:drawableRight="@drawable/ic_phone_orange"
+             android:drawablePadding="5dp"
+             android:text="0990 537 4633"
+             android:textColor="@color/color06"
+             android:textDirection="rtl"
+             android:textSize="16sp"
+             android:textStyle="bold" />
 
-
+ -->
     </LinearLayout>
 
     <View
         android:id="@+id/view3"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_below="@id/lin3"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/gray" />
+        android:layout_marginTop="@dimen/margin_border"
+        android:background="@color/gray"
+        app:layout_constraintLeft_toRightOf="@id/guideline_left"
+        app:layout_constraintRight_toLeftOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/lin3" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view3"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/margin_border"
+        android:layout_marginBottom="@dimen/margin_border"
         android:layoutDirection="rtl"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintHeight_percent="0.26"
+        app:layout_constraintLeft_toRightOf="@id/guideline_left"
+        app:layout_constraintRight_toLeftOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/view3">
 
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_travel_details"
+            style="@style/dark_blue_16"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:background="@drawable/border_fifteen_radius_green"
-            android:drawableRight="@drawable/ic_list_dark_blue"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:drawableStart="@drawable/ic_list_dark_blue"
+            android:layoutDirection="rtl"
             android:text="@string/details"
-            android:textColor="@color/color06"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.3" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_request"
+            style="@style/dark_blue_16"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:background="@drawable/border_fifteen_radius_green"
-            android:drawableRight="@drawable/ic_refresh_dark_blue"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:drawableStart="@drawable/ic_refresh_dark_blue"
             android:text="@string/request"
-            android:textColor="@color/color06"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5" />
 
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
