--- a/app/src/main/res/layout/card_unsuccessful.xml
+++ b/app/src/main/res/layout/card_unsuccessful.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="60dp"
     android:layout_marginLeft="60dp"
     android:layout_marginTop="30dp"
+    android:layout_marginRight="60dp"
     android:background="@drawable/back_thirty_radius_white">
 
 
@@ -15,22 +15,23 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layoutDirection="rtl"
         android:orientation="horizontal"
-        android:weightSum="3.5"
-        android:layoutDirection="rtl">
+        android:weightSum="3.5">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
-            android:orientation="horizontal"
-            android:layoutDirection="rtl">
+            android:layoutDirection="rtl"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:background="@drawable/bicycle"/>
+                android:background="@drawable/bicycle" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,8 +78,6 @@
         </TextView>
 
 
-
-
     </LinearLayout>
 
     <LinearLayout
@@ -89,8 +88,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
-        android:orientation="horizontal"
         android:layoutDirection="rtl"
+        android:orientation="horizontal"
         android:weightSum="2">
 
         <LinearLayout
@@ -104,8 +103,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/transfer_payment"
-                android:textColor="@color/darkGray"
                 android:textAlignment="center"
+                android:textColor="@color/darkGray"
                 android:textDirection="ltr"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -113,22 +112,23 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_gravity="center"
                 android:layoutDirection="rtl"
-                android:layout_gravity="center">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/pay_amount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp"
                     android:text="5000"
                     android:textAlignment="center"
                     android:textColor="@color/color06"
                     android:textSize="15sp"
                     android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -137,7 +137,6 @@
                     android:textColor="@color/darkGray"
                     android:textSize="15sp"
                     android:textStyle="bold" />
-
 
 
             </LinearLayout>
@@ -184,7 +183,6 @@
         </LinearLayout>
 
 
-
     </LinearLayout>
 
     <View
@@ -200,10 +198,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/view1"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
-        android:orientation="horizontal"
+        android:layout_marginRight="10dp"
         android:layoutDirection="rtl"
+        android:orientation="horizontal"
         android:weightSum="2">
 
         <LinearLayout
@@ -217,25 +215,25 @@
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
                 android:text="@string/payment_company"
+                android:textAlignment="center"
                 android:textColor="@color/darkGray"
                 android:textDirection="ltr"
-                android:textAlignment="center"
                 android:textSize="15sp"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tv_payment_comp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
                 android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:gravity="center"
                 android:text="5000"
                 android:textColor="@color/color06"
                 android:textSize="15sp"
                 android:textStyle="bold" />
-
 
 
         </LinearLayout>
@@ -246,7 +244,6 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="@color/gray" />
-
 
 
         <LinearLayout
@@ -300,8 +297,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:gravity="center"
             android:text="@string/destination"
             android:textColor="@color/darkGray"
@@ -312,8 +309,8 @@
             android:id="@+id/switch_destination_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:checked="true"
+            android:gravity="center"
             android:textOff="@string/start"
             android:textOn="@string/destination" />
 
@@ -346,45 +343,47 @@
             android:id="@+id/tv_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_location_green"
+            android:drawableStart="@drawable/ic_location_green"
             android:drawablePadding="10dp"
+            android:layoutDirection="rtl"
             android:text="ولیعصر،میدان ولیعصر،پلاک 1،واحد5"
             android:textColor="@color/color06"
             android:textSize="15sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:drawableRight="@drawable/ic_person_green_24dp"
-            android:drawablePadding="10dp"
-            android:text="محمدرضا اکبری"
-            android:textColor="@color/color06"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+        <!--  <TextView
+              android:id="@+id/tv_name"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="5dp"
+              android:drawableRight="@drawable/ic_person_green_24dp"
+              android:drawablePadding="10dp"
+              android:text="محمدرضا اکبری"
+              android:textColor="@color/color06"
+              android:textSize="15sp"
+              android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:drawableRight="@drawable/ic_phone_in_talk_green_24dp"
-            android:drawablePadding="10dp"
-            android:textDirection="rtl"
-            android:text="0990 537 4633"
-            android:textColor="@color/color06"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
+          <TextView
+              android:id="@+id/tv_phone"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="5dp"
+              android:drawableRight="@drawable/ic_phone_in_talk_green_24dp"
+              android:drawablePadding="10dp"
+              android:text="0990 537 4633"
+              android:textColor="@color/color06"
+              android:textDirection="rtl"
+              android:textSize="15sp"
+              android:textStyle="bold" />
+  -->
         <TextView
             android:id="@+id/tv_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:drawableRight="@drawable/ic_comment_dark_blue_24dp"
+            android:drawableStart="@drawable/ic_comment_dark_blue_24dp"
             android:drawablePadding="10dp"
+            android:layoutDirection="rtl"
             android:text="لطفا سریعتر به دستم برسد"
             android:textColor="@color/darkGray"
             android:textSize="15sp"
@@ -406,36 +405,17 @@
             android:id="@+id/btn_retry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="@dimen/margin_border"
+            android:layout_marginBottom="@dimen/margin_border"
             android:background="@drawable/border_fifteen_radius_green"
-            android:drawableRight="@drawable/ic_refresh_dark_blue"
+            android:drawableStart="@drawable/ic_refresh_dark_blue"
+            android:layoutDirection="rtl"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="@string/request"
             android:textColor="@color/color06"
             android:textSize="16dp"
             android:textStyle="bold" />
-        <Button
-            android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/border_pink"
-            android:drawableRight="@drawable/ic_close_dark_blue_24dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/delete"
-            android:textColor="@color/color06"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-
 
     </LinearLayout>
 
