--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,10 +89,53 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/white</item>
+
+    </style>
+
+    <style name="dark_spinner">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/color06</item>
         <item name="android:paddingRight">10dp</item>
         <item name="android:paddingLeft">10dp</item>
 
     </style>
+
+    <style name="dark_back_spinner">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/border_ten_radius_gray</item>
+        <item name="android:drawableEnd">@drawable/ic_expand_more_dark_blue_24dp</item>
+        <item name="android:layoutDirection">rtl</item>
+        <item name="android:textColor">@color/color06</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+
+    </style>
+
+    <style name="white_spinner">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/left_rounded_green</item>
+        <item name="android:drawableEnd">@drawable/ic_expand_more_dark_blue_24dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingStart">30dp</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
+
+    <style name="dark_spinner_item">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/border_ten_radius_gray</item>
+        <item name="android:drawableEnd">@drawable/ic_expand_more_dark_blue_24dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingStart">50dp</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
+
 
     <style name="white_bold_16">
         <item name="android:textStyle">bold</item>
@@ -116,6 +159,15 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/green</item>
+
+    </style>
+
+    <style name="dark_blue_16">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/color06</item>
+        <item name="android:paddingLeft">@dimen/text_padding</item>
+        <item name="android:paddingRight">@dimen/text_padding</item>
 
     </style>
 
